		   libsamplerate
	- fixed: use of the JACK transport API was never actually 
                 enabled in 2.2.3
	- fixed: .aiff/.snd/.au input/output was not working at all
  	 	 due to a typo in source code
	- fixed: a chain with a short input file could cause a nasty
 		 feedback loop if processed with certain effects 
		 and mixed with audio from other chains
27042003 (v2.2.3)  -** stable release **-
	- added: support for both -0.64 and 0.65- JACK versions; 
		 transport functionality is only enabled with the 
		 newer versions
	- added: automatic query of child object sample rate by 
		 giving 'auto' as 2nd arg to resample object
	- changed: by default python version of ECI is used; the C 
		   python module for ECI, pyecasound, is only compiled
		   if --enable-pyecasound is specified
	- changed: jack_auto,dstclient input/output object now 
		   automatically connects to matching ports of JACK
		   dstclient (no longer requires dstclient to have
		   in_X/out_X port names)
	- fixed: yet another fix for creating temporary files in
                 ecanormalize and ecafixdc; now both LOGNAME and USER
		 are checked for a valid user name
	- fixed: prefer usleep over nanosleep on cygwin; avoids 
		 the excessive-cpu-usage problem
	- fixed: work-around for a bug in the pcm plugin of ALSA 0.9.1
		 and earlier that caused recording/playback to
		 stop to an audio i/o error
	- fixed: inconsistencies in how configure --disable/enable-feat
		 options were handled
	- fixed: if pyecasound was disabled at build time, make
		 install target failed in ecasound/pyecasound
18032003 (v2.2.2)  -** stable release **-
	- edi-entries: edi-35 and edi-36 added
	- added: ecacontrol.py - a native python implementation of 
		 the ECI API [jhalttun]
	- added: stream ogg/mp3/mid directly from network if the 
	         filename has a url-prefix
	- added: author name to the description of LADSPA plugins
	- added: latest config.guess and config.sub added to 
	         the dist package