@@ -32,8 +32,8 @@ dnl
 dnl defines: LIBECASOUND_VERSION, LIBECASOUNDC_VERSION, LIBKVUTILS_VERSION
 dnl ---
 
-LIBECASOUND_VERSION=10
-LIBECASOUND_VERSION_AGE=1
+LIBECASOUND_VERSION=11
+LIBECASOUND_VERSION_AGE=2
 LIBECASOUNDC_VERSION=1
 LIBKVUTILS_VERSION=5
 LIBKVUTILS_VERSION_AGE=1
