@@ -1,3 +1,8 @@
+2003-05-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* eca-audio-time.h (set_samples_per_second_keeptime): Added. 
+	* library version to 11:0:2
+
 2003-02-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* eca-engine.cpp (is_finite_length): Added.
